overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 nav,
 body {
   background-color: #FFFFFF;
+  overflow-x: hidden;
 }
 
 ::-moz-selection {
